# ComfyUI_FMJ_LLMP

./: __init__.py  fmj_llm_prompt.py  pyproject.toml  readme.md
Workflow/: ⚡ FMJ-LLM-Prompt.json
js/: fmj_llm_frontend.js
txt/Anima/: Anima.txt
txt/Ideogram/: Deno.txt  DenoVision.txt  standart.txt
txt/Prompt/: LTX-Video.txt  Zimage.txt  Zimagestructure.txt  add image.txt  album.txt  character.txt  cyberpunk.txt  enhancer.txt  illustration_bandes_dessinees.txt  photo.txt  pink.txt  qwen_edit.txt  qwen_edit_camera.txt  qwen_edit_next_scene.txt  qwen_edit_relight.txt  random.txt  surrealism-1.txt  surrealism.txt
txt/Vision/: Anima-vision.txt  art_style.txt  characters.txt  composition.txt  detailed.txt  lighting.txt  objects.txt  simple.txt
