[project]
name = "ComfyUI_FMJ_LLMP"
description = "Generate random prompts easily for FMJ using TXT files (1 prompt per file)."
version = "1.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/bulldog68/ComfyUI_FMJ_LLMP"

[tool.comfy]
PublisherId = "bulldog68"
DisplayName = "ComfyUI_FMJ_LLMP"
Icon = ""